--- a/beehive-dashboard/package.json
+++ b/beehive-dashboard/package.json
@@ -24,7 +24,9 @@
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.10.3",
+    "reconnecting-websocket": "^4.4.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
